3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/map.c: Replace code with OB_TYPE_MOVE_BLOCK - effectively same as what
  it was.
include/define.h: Update OB_TYPE_MOVE_BLOCK so that spaces that don't block
  any type of movement doesn't block objects that also don't have movement.
  This fixes cases of gates not pushing objects off them.
server/c_party.c: Remove double use of ->next pointer/loop in 
    confirm_party_password() - fixes crash and likely makes setting party
    password work more reliably.
MSW 2005-11-29

common/object.c: Fix wrong comparision operator in free_object2() to make
   monsters drop loot again.
Andreas Kirschbaum 2005-11-28

Basically added a parameter to 'skills' command to filter skills. And one char/const char* fix.
common/anim.c: use const char* for find_animation.
include/libproto.h: find_animation uses a const char*.
include/sproto.h: fix prototype.
server/c_wiz.c: send parameter to show_skills.
server/skill_util.c: add search parameter to show_skills command.
Ryo 2005-11-27

plugins/cfpython/cfpython_map.c: use wrappers instead of direct property access.
plugins/common/include/plugin_common.h: new wrappers for maps.
plugins/common/plugin_common.c: new wrappers for maps.
Ryo 2005-11-26

plugins/cfpython/Makefile.in: rebuilt.
Andreas Kirschbaum 2005-11-23

Plugins can now get archetypes. Added a check in cfapi_object_set_property to
 prevent changing archtypes.
Fixed some Python bugs related to map properties.
Added Crossfire.GetArchetypes and Crossfire.GetMaps to get all archetypes/maps.
Modified files:
 include/plugin.h sproto.h
 plugins/cfpython/include: cfpython.h cfpython_map_private.h cfpython_object_private.h